--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-4">
     <h3 id="syllabus-shell">The Unix Shell</h3>
     <ul>
       <li>Files and directories</li>
@@ -11,7 +11,7 @@
       <li><a href="{{site.swc_pages}}/shell-novice/reference">Reference...</a></li>
     </ul>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-4">
     <h3 id="syllabus-python">Programming in Python</h3>
     <ul>
       <li>Using libraries</li>
@@ -24,6 +24,22 @@
       <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference...</a></li>
     </ul>
   </div>
+  <div class="col-md-4">
+     <h3 id="syllabus-git">Version Control with Git</h3>
+    <ul>
+      <li>Creating a repository</li>
+      <li>Recording changes to files: <code>add</code>, <code>commit</code>, ...</li>
+      <li>Viewing changes: <code>status</code>, <code>diff</code>, ...</li>
+      <li>Ignoring files</li>
+      <li>Working on the web: <code>clone</code>, <code>pull</code>, <code>push</code>, ...</li>
+      <li>Resolving conflicts</li>
+      <li>Open licenses</li>
+      <li>Where to host work, and why</li>
+      <li><a href="{{site.swc_pages}}/git-novice/reference">Reference...</a></li>
+    </ul>
+  </div>
+
+
   <!--
   <div class="col-md-6">
     <h3 id="syllabus-r">Programming in R</h3>
