--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -68,7 +68,7 @@
    -->
 </div>
 
-<div class="row">
+<!--<div class="row">
   <div class="col-md-12">
     <h3 id="syllabus-git">Version Control with Git</h3>
     <ul>
@@ -108,4 +108,4 @@
       <li><a href="{{site.lc_pages}}library-openrefine/reference">Reference...</a></li>
     </ul>
   </div>-->
-</div>
+<!--</div>-->
