--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -52,8 +52,7 @@
       <li><a href="{{site.swc_pages}}/r-novice-inflammation/reference">Reference...</a></li>
     </ul>
   </div>
-  -->
-  <!--
+  
   <div class="col-md-6">
     <h3 id="syllabus-matlab">Programming in MATLAB</h3>
     <ul>
@@ -96,8 +95,7 @@
       <li>Programming with databases</li>
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference">Reference...</a></li>
     </ul>
-  </div>-->
-    <!--
+  </div>
   <div class="col-md-6">
     <h3 id="syllabus-r">Open Refine</h3>
     <ul>
